--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 
 	</div>
-	<div class="PDF"> <button type="button"  style="background-color: blueviolet"><h2>Download PDF</h2></button> </div>
+	<div class="PDF"> <button type="button"  style="background-color: blueviolet"><a href="https://www.google.com/">Download PDF</a></button> </div>
 
 <footer>
    
